# print-nanny-cli-experimental

./: Cargo.toml  Cross.toml  README.md
src/: auth.rs  camera.rs  config.rs  cpuinfo.rs  device.rs  lib.rs  main.rs  printer.rs  prompt.rs
tests/: cli.rs  cpuinfo.rs
tests/fixtures/: amd64_cpuinfo.txt  rpi_cpuinfo.txt
