[package]
name = "printnanny"
version = "0.1.0"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "1"
predicates = "2"
tempfile = "3"

[dependencies]
anyhow = "1"
clap-verbosity-flag = "0.3"
env_logger = "0.8"
log = "0.4"
structopt = "0.3"