[package]
name = "printnanny"
version = "0.1.0"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2018"
license = "AGPLv3"
readme = "README.md"
homepage = "https://github.com/bitsy-ai/print-nanny-cli"
repository = "https://github.com/bitsy-ai/print-nanny-cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "1"
predicates = "2"
tempfile = "3"

[dependencies]
anyhow = "1"
clap = "2"
confy = "0.4"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"