[package]
name = "printnanny"
version = "0.1.0"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2018"
license = "AGPLv3"
readme = "README.md"
homepage = "https://github.com/bitsy-ai/print-nanny-cli"
repository = "https://github.com/bitsy-ai/print-nanny-cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "1"
predicates = "2"
tempfile = "3"
httpmock = "0.5"

[dependencies]
anyhow = "1"
clap = "2"
confy = "0.4"
dialoguer = "0.8"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
print-nanny-client = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = "0.6.9"
structopt = "0.3"
tokio = { version = "1.8", features = ["full"] }
